--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,11 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  src: url('/fonts/Roboto-Regular.ttf') format("truetype");
+  font-display: swap;
+}
 
 :root {
   padding: 0;
   margin: 0;
+  background: #0d0d0d;
+  color: #fff;
   font-family: -apple-system, Roboto;
 }
 
@@ -25,6 +33,5 @@
   background: -webkit-linear-gradient(#e8ded2, #a3d2ca);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  -webkit-text-stroke: 2px #5eaaa8;
-  color: #fff
+  -webkit-text-stroke: 1.5px #5eaaa8;
 }
